Added engagement stats table and charts

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "version": "1.0.1",
   "dependencies": {
+    "5": "^0.0.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -52,6 +53,7 @@
     "react-router-hash-link": "^2.3.1",
     "react-scripts": "3.4.3",
     "react-transition-group": "^4.4.1",
+    "recharts": "^2.15.3",
     "sass": "^1.50.0",
     "simplebar-react": "^2.3.0"
   },
