--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@themesberg/react-bootstrap": "^1.4.1",
-    "bootstrap": "5.0.0-beta1",
+    "bootstrap": "^5.0.0-beta1",
     "chartist": "^0.10.1",
     "chartist-plugin-tooltips-updated": "^1.0.0",
     "firebase": "^11.6.0",
+    "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
+    "react-bootstrap": "^2.10.10",
     "react-chartist": "^0.14.4",
     "react-copy-to-clipboard": "^5.0.3",
     "react-datetime": "^3.0.4",
